# yuni_python_utils_service

./: .gitignore  LICENSE  README.md  example.yml  example_env  manage.py  pyproject.toml  run.bat
yuni_python_utils_service/: api.py  asgi.py  settings.py  urls.py  wsgi.py
yuni_python_utils_service/apis/: hello_api.py  logo.py  plugin_api.py
yuni_python_utils_service/plugin/: plugin_api.py
yuni_python_utils_service/schema/: logo_schema.py  plugin_schema.py  schema.py
yuni_python_utils_service/service/: hello.py  logo_service.py  plugin_service.py
yuni_python_utils_service/statistic/: templatetest.html
yuni_python_utils_service/statistic/template/: plugin_detail_info.html  plugin_info_list.html  test.html
yuni_python_utils_service/utils/: load_yml.py  tencent_cos_visit.py  wright_player.py  yuni_render.py
